Fix multiStep form overflow

--- a/grid-ui/saplings/product/src/components/MultiStepForm.scss
+++ b/grid-ui/saplings/product/src/components/MultiStepForm.scss
@@ -39,6 +39,7 @@
       background: #333333;
       color: #ffffff;
       border-radius: 5px 0 0 5px;
+      overflow-y: auto;
 
       > h5 {
         display: inline-block;
